--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
+    "generate": "nuxt build && nuxt export",
     "serve": "nuxt serve"
   },
   "dependencies": {
